# PySer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: deserializer_example.py  example1.py  example2.py  serializer_example.py
pyser/: __init__.py  constants.py  deserializer.py  exceptions.py  serializer.py  utils.py
tests/: example1.py  example2.py
tests/deserializer/: test.py
tests/serializer/: test.py
